# xrdantic

./: .cruft.json  .gitignore  CHANGELOG.md  README.md  cliff.toml  hatch.toml  pyproject.toml  ruff.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yaml  changelog.yaml  release.yaml  test.yaml
docs/: api.md  conf.py  contributing.md  references.bib
docs/extensions/: typed_returns.py
docs/notebooks/: example.ipynb
logo/xrdantic-logo/: package-lock.json  package.json  pnpm-lock.yaml
logo/xrdantic-logo/scripts/: build-banner.js  compile-banner.js
logo/xrdantic-logo/scripts/components/: DataTypeIcons.jsx  XarrayLogo.jsx
logo/xrdantic-logo/scripts/lib/: config-manager.js  logger.js  png-converter.js  react-renderer.js  svg-loader.js
logo/xrdantic-logo/scripts/templates/xrdantic/: config.json  template.jsx
scripts/: image_models.py  weather_models.py
src/xrdantic/: __init__.py  config.py  errors.py  factories.py  models.py  testing.py  types.py  utils.py  validation.py
tests/: conftest.py  test_basic.py  test_config.py  test_factories.py  test_utils.py  utils.py
tests/models/: test_coordinate.py  test_dataarray.py  test_dataset.py  test_datatree.py
