[build-system]
build-backend = "hatchling.build"
requires = [ "hatch-vcs", "hatchling" ]

[project]
name = "xrdantic"
description = "Pydantic Scaffolding for Xarray"
readme = "README.md"
license = { file = "LICENSE" }
maintainers = [
  { name = "Sricharan Reddy Varra", email = "sricharanvarra@gmail.com" },
]
authors = [
  { name = "Sricharan Reddy Varra" },
]
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dynamic = [ "version" ]
dependencies = [
  "array-api-compat>=1.12",
  # for debug logging (referenced from the issue template)
  "more-itertools>=10.7",
  "natsort>=8.4",
  "numpydantic>=1.6.9",
  "pydantic>=2.11.5",
  "pydantic-settings>=2.9.1",
  "session-info2",
  "xarray",
]
optional-dependencies.dev = [
  "pre-commit",
]
optional-dependencies.doc = [
  "autodoc-pydantic>=2.2",
  "docutils>=0.8,!=0.18.*,!=0.19.*",
  "ipykernel",
  "ipython",
  "matplotlib>=3.10.3",
  "myst-nb>=1.1",
  "pandas",
  # Until pybtex >0.24.0 releases: https://bitbucket.org/pybtex-devs/pybtex/issues/169/
  "scanpydoc>=0.15.4",
  "setuptools",
  "sphinx>=8.1",
  "sphinx-autodoc-typehints",
  "sphinx-book-theme>=1",
  "sphinx-copybutton",
  "sphinx-tabs",
  "sphinxcontrib-bibtex>=1",
  "sphinxext-opengraph",
]
optional-dependencies.nb = [
  "jupyterlab>=4.4.3",
]
optional-dependencies.test = [
  "coverage",
  "hypothesis>=6.133",
  "pytest",
  "pytest-cov>=6.1.1",
]
# https://docs.pypi.org/project_metadata/#project-urls
urls.Documentation = "https://xrdantic.readthedocs.io/"
urls.Homepage = "https://github.com/srivarra/xrdantic"
urls.Source = "https://github.com/srivarra/xrdantic"

[tool.pytest.ini_options]
testpaths = [ "tests" ]
xfail_strict = true
addopts = [
  "--import-mode=importlib", # allow using test files with same name
]

[tool.coverage.run]
source = [ "xrdantic" ]
omit = [
  "**/test_*.py",
]

[tool.cruft]
skip = [
  "tests",
  "src/**/__init__.py",
  "src/**/basic.py",
  "docs/api.md",
  "docs/changelog.md",
  "docs/references.bib",
  "docs/references.md",
  "docs/notebooks/example.ipynb",
]
